Bug 97616   test A4. horizontal scrollbar displayed and not needed

--- a/platform/org.eclipse.platform/intro/css/overview/overview.css
+++ b/platform/org.eclipse.platform/intro/css/overview/overview.css
@@ -18,6 +18,10 @@ iframe {
 	padding-left:10px;
 	}
 	
+/* mozilla scrollbar appearing off page fix */
+#page-content > iframe {
+	width: 98%;
+}	
 
 
 /* 
